--- a/index.html
+++ b/index.html
@@ -14,7 +14,26 @@
 
 <body>
 
-  
+  <main>
+
+    <section class="main__header">
+      <img class="icon__star" src="./images/icon-star.svg" alt="Icon star">
+      <h1> How did we do?</h1>
+      <p class="main__paragraph"> Please let us know how we did with your support request. All feedback is appreciated to help us improve our
+        offering! </p>
+    </section>
+
+    <section class="section__number-buttons">
+      <button class="section__number-buttons_button">1</button>
+      <button class="section__number-buttons_button">2</button>
+      <button class="section__number-buttons_button">3</button>
+      <button class="section__number-buttons_button">4</button>
+      <button class="section__number-buttons_button">5</button>
+    </section>
+
+    <button type="submit" data-btn-submit>Submit</button>
+
+  </main>
 
 
   <!-- <footer class="attribution">
