--- a/index.html
+++ b/index.html
@@ -24,14 +24,24 @@
     </section>
 
     <section class="section__number-buttons">
-      <button class="section__number-buttons_button">1</button>
-      <button class="section__number-buttons_button">2</button>
-      <button class="section__number-buttons_button">3</button>
-      <button class="section__number-buttons_button">4</button>
-      <button class="section__number-buttons_button">5</button>
+      <button class="section__number-buttons_button">
+        <span>1</span>
+      </button>
+      <button class="section__number-buttons_button">
+        <span>2</span>
+      </button>
+      <button class="section__number-buttons_button">
+        <span>3</span>
+      </button>
+      <button class="section__number-buttons_button">
+        <span>4</span>
+      </button>
+      <button class="section__number-buttons_button">
+        <span>5</span>
+      </button>
     </section>
 
-    <button type="submit" data-btn-submit>Submit</button>
+    <button type="submit" data-btn-submit>SUBMIT</button>
 
   </main>
 
