adicionando estilos para pagina thankyou

--- a/thankyou.html
+++ b/thankyou.html
@@ -17,7 +17,7 @@
 
         <section class="section__thanks">
             <img class="illustration__thanks" src="./images/illustration-thank-you.svg" alt="Illustration of a card machine with a receipt">
-            <span class="selected__button">You selected 4 out of 5</span>
+            <span>You selected 4 out of 5</span>
             <h1>Thank you!</h1>
             <p class="paragraph__thanks">We appreciate you taking the time to give a rating. If you ever need more support,
                 don’t hesitate to get in touch!</p>
