Ajustando HTML e CSS principal

--- a/index.html
+++ b/index.html
@@ -19,29 +19,20 @@
     <section class="main__header">
       <img class="icon__star" src="./images/icon-star.svg" alt="Icon star">
       <h1> How did we do?</h1>
-      <p class="main__paragraph"> Please let us know how we did with your support request. All feedback is appreciated to help us improve our
+      <p class="main__paragraph"> Please let us know how we did with your support request. All feedback is appreciated
+        to help us improve our
         offering! </p>
     </section>
 
-    <section class="section__number-buttons">
-      <button class="section__number-buttons_button">
-        <span>1</span>
-      </button>
-      <button class="section__number-buttons_button">
-        <span>2</span>
-      </button>
-      <button class="section__number-buttons_button">
-        <span>3</span>
-      </button>
-      <button class="section__number-buttons_button">
-        <span>4</span>
-      </button>
-      <button class="section__number-buttons_button">
-        <span>5</span>
-      </button>
-    </section>
+    <form data-form>
+      <input type="button" value="1" class="section__number-buttons_button" id="number__one">
+      <input type="button" value="2" class="section__number-buttons_button" id="number__two">
+      <input type="button" value="3" class="section__number-buttons_button" id="number__three">
+      <input type="button" value="4" class="section__number-buttons_button" id="number__four">
+      <input type="button" value="5" class="section__number-buttons_button" id="number__five">
 
-    <button type="submit" data-btn-submit>SUBMIT</button>
+      <button data-btn-submit>SUBMIT</button>
+    </form>
 
   </main>
 
