--- a/thankyou.html
+++ b/thankyou.html
@@ -16,15 +16,19 @@
     <main>
 
         <section class="section__thanks">
-            <img class="illustration__thanks" src="./images/illustration-thank-you.svg" alt="Illustration of a card machine with a receipt">
-            <span>You selected 4 out of 5</span>
+            <img class="illustration__thanks" src="./images/illustration-thank-you.svg"
+                alt="Illustration of a card machine with a receipt">
+            <span class="
+            selected__number"></span>
             <h1>Thank you!</h1>
-            <p class="paragraph__thanks">We appreciate you taking the time to give a rating. If you ever need more support,
+            <p class="paragraph__thanks">We appreciate you taking the time to give a rating. If you ever need more
+                support,
                 don’t hesitate to get in touch!</p>
         </section>
 
     </main>
 
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
