--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </section>
 
     <form data-form>
-      <input type="button" value="1" class="section__number-buttons_button" id="number__one">
-      <input type="button" value="2" class="section__number-buttons_button" id="number__two">
-      <input type="button" value="3" class="section__number-buttons_button" id="number__three">
-      <input type="button" value="4" class="section__number-buttons_button" id="number__four">
-      <input type="button" value="5" class="section__number-buttons_button" id="number__five">
+      <input type="button" value="1" class="form__input" id="number__one">
+      <input type="button" value="2" class="form__input" id="number__two">
+      <input type="button" value="3" class="form__input" id="number__three">
+      <input type="button" value="4" class="form__input" id="number__four">
+      <input type="button" value="5" class="form__input" id="number__five">
 
       <button data-btn-submit>SUBMIT</button>
     </form>
