--- a/index.html
+++ b/index.html
@@ -37,10 +37,10 @@
   </main>
 
 
-  <!-- <footer class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="https://github.com/joaometzdorf" target="_blank">João Metzdorf</a>.
-  </footer> -->
+  </footer>
 
   <script src="./js/script.js"></script>
 </body>
