--- a/thankyou.html
+++ b/thankyou.html
@@ -27,6 +27,11 @@
 
     </main>
 
+    <footer class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+        Coded by <a href="https://github.com/joaometzdorf" target="_blank">João Metzdorf</a>.
+      </footer>
+
     <script>
         const selectedNumber = document.querySelector(".selected__number");
 
